--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.1",
+    "sqlite": "^3.0.3",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
